# nutrition_prj

./: .gitignore  .replit  my.db  pyproject.toml  run.py  start_web.sh
.agents/memory/: MEMORY.md  web-app-arch.md
artifacts/mockup-sandbox/: package-lock.json
artifacts/mockup-sandbox/src/.generated/: mockup-components.ts
artifacts/mockup-sandbox/src/components/mockups/nutrition-app/: NutritionApp.tsx
src/: README.md
src/api/: api.py
src/cli/: app.py  menu.py  user_popup.py
src/core/: Person.py  food.py  registries.py  reports.py
src/db/: database.py  db_config.py  db_error_handler.py  db_helper.py
src/tg/: bot.py
tests/: data_generator.py  test_database.py  test_db_generator.py  test_generator.py  test_user.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  api.ts  style.css
web/src/components/: ReportPanel.vue  UserModal.vue
