[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition_prj"
version = "0.1.0"
description = "Программа для учёта питания (учебный проект)"
authors = [
    {name = "Ваше Имя", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # сюда перенесите библиотеки из requirements.txt, например:
    # "prettytable>=3.0",
    # "colorama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.1",
    "black",
    "mypy",
    "psycopg2-binary",
    "dotenv",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"

[project.scripts]
nutrition = "cli.app:main"   # пример, если у вас в src/cli/app.py есть функция main()